--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '2.1'
 services:
   influxdb:
     image: influxdb:latest
@@ -16,12 +16,10 @@ services:
       - ./data/influxdb:/var/lib/influxdb
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8086"]
+      test: ["CMD", "curl", "-f", "http://localhost:8086/status"]
       interval: 10s
       timeout: 10s
       retries: 30
-      start_period: 10s
-
 
   grafana:
     image: grafana/grafana:latest
@@ -39,13 +37,17 @@ services:
       interval: 10s
       timeout: 10s
       retries: 30
-      start_period: 10s
 
   app:
     container_name: app
+    image: app
     build:
       context: .
-    command: "./main history --from 2018-01-01 --to 2019-01-01"
+    command:
+      - sh
+      - -c
+      - ./main history --from 2018-01-01 --to 2019-01-01; while true; do sleep 60; done;
     restart: "no"
     depends_on:
-      - influxdb
+      influxdb:
+        condition: service_healthy
